--- a/styles/style.css
+++ b/styles/style.css
@@ -1,131 +1,123 @@
 /* PAGES */
 
 .page {
-  min-width : 1100px;
-  max-width : 1600px;
-  margin : 0 auto;
-  font-family : 'Helvetica Neue', Arial, sans-serif;
-  }
-  .block {
-  border : red solid 1px;
-  }
-  .page_section {
-  padding-top : 100px;
-  }
-  .page_section:nth-of-type(3) {
-  margin-top : 100px;
-  }
-  .page_section:nth-of-type(4) {
-  padding-top : 90px;
-  padding-bottom : 90px;
-  }
-  .all_links {
-  text-decoration : none;
-  }
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: 0 auto;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+}
 
-  /* HEADER */
+/* HEADER */
 
-  .header {
-  height : 100vh;
-  min-height : 600px;
-  max-height : 756px;
-  background-color : #f2f2f2;
-  display : flex;
-  position : relative;
-  overflow : visible;
-  }
-  .logo {
-  width : 228px;
-  height : 32px;
-  top : 30px;
-  left : 64px;
-  }
-  .logo_place_header {
-  background-image : url("../images/logo_place_header.svg");
-  position : absolute;
-  z-index : 2;
-  }
-  .header__title {
-  width : 730px;
-  line-height : 96px;
-  font-size : 102px;
-  font-weight : bold;
-  align-self : center;
-  position : relative;
-  left : 64px;
-  }
-  .header__subtitle {
-  width : 388px;
-  line-height : 25px;
-  font-size : 18px;
-  font-weight : normal;
-  position : absolute;
-  left : 64px;
-  bottom : 30px;
-  }
-  .header__link {
-  color : #2f80ed;
-  }
-  .header__main-illustration {
-  width : 765px;
-  height : 608px;
-  position : absolute;
-  right : 0;
-  bottom : 0;
-  z-index : 1;
-  }
-  .header__image {
-  width : 100%;
-  height : 100%;
-  object-fit : fill;
-  }
-  .header__square-pic {
-  height : 568px;
-  width : 568px;
-  top : 64px;
-  background-color : #2f80ed;
-  position : absolute;
-  right : 0;
-  z-index : 0;
-  }
+.header {
+  height: 100vh;
+  min-height: 600px;
+  max-height: 756px;
+  background-color: #f2f2f2;
+  display: flex;
+  position: relative;
+}
+.logo {
+  width: 228px;
+  height: 32px;
+  top: 30px;
+  left: 64px;
+}
+.logo_place_header {
+  background-image: url("../images/logo_place_header.svg");
+  position: absolute;
+  z-index: 2;
+  object-fit: cover;
+}
+.header__title {
+  max-width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
+  align-self: center;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  margin-left: 64px;
+  z-index: 5;
+}
+.header__subtitle {
+  max-width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  left: 64px;
+  bottom: 30px;
+  z-index: 4;
+}
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  background-size: cover;
+}
+.header__image {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+.header__square-pic {
+  height: 568px;
+  width: 568px;
+  top: 64px;
+  background-color: #2f80ed;
+  position: absolute;
+  right: 0;
+  z-index: 0;
+}
 
-  /* DESCRIPTION */
+/* DESCRIPTION */
 
-  .description {
-  display : flex;
-  justify-content : center;
-  }
-  .two-columns {
-  width : 80%;
-  display : flex;
-  justify-content : space-between;
-  }
-  .two-columns__brief {
-  width : 175px;
-  color : #2f80ed;
-  line-height : 1.2;
-  font-size : 18px;
-  font-weight : normal;
-  margin : 0;
-  }
-  .two-columns__main-text {
-  width : 80%;
-  min-width : 784px;
-  display : flex;
-  flex-direction : column;
-  line-height : 34px;
-  font-size : 24px;
-  font-weight : normal;
-  }
-  .two-columns__paragraph {
-  margin : 0 0 30px;
-  }
-  .two-columns__paragraph:last-of-type {
-  margin-bottom : 0;
-  }
-  .two-columns__span-accent {
-  font-weight : bold;
-  }
+.description {
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+}
+.two-columns {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+}
+.two-columns__brief {
+  width: 175px;
+  color: #2f80ed;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+}
+.two-columns__main-text {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+.two-columns__paragraph {
+  margin: 0 0 30px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+.two-columns__span-accent {
+  font-weight: bold;
+}
 
 /* DIGITS */
 
@@ -133,7 +125,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  }
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
 
 .section-title {
   width: 60%;
@@ -142,180 +136,197 @@
   font-weight: bold;
   display: flex;
   justify-content: center;
+  padding: 0px;
   margin: 0px;
-  }
+  z-index: 1;
+}
 
 .section-subtitle {
+  width: 60%;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin: 20px;
-  }
+  display: flex;
+  justify-content: center;
+  margin: 0px;
+  padding-top: 20px;
+  padding-bottom: 80px;
+}
 
 .table {
   width: 1100px;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  }
+}
 
 .table__cell {
   width: 250px;
   margin-top: 60px;
-  }
+}
 
 .table__heading {
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
   margin: 0;
-  }
+}
 
 .table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   margin: 20px 0 0;
-  }
+}
+.table_theme_dark {
+  z-index: 1;
+}
+.table__cell_theme_dark {
+  width: 200px;
+  color: #fff;
+  margin-top: 80px;
+}
 
-  /* FEYNMAN */
+/* FEYNMAN */
 
-  .feynman {
-  height : 790px;
-  background-color : #f2f2f2;
-  display : flex;
-  flex-direction : column;
-  background-image : url("../images/feynman.png");
-  background-position : left bottom;
-  background-size : 867px 637px;
-  background-repeat : no-repeat;
-  align-items : center;
-  justify-content : flex-start;
-  position : relative;
-  }
-  .feynman__title {
-  width : 648px;
-  line-height : 1.15;
-  font-size : 120px;
-  font-weight : bold;
-  text-align : center;
-  margin : 0;
-  }
-  .feynman__subtitle {
-  line-height : 51px;
-  font-size : 36px;
-  font-weight : normal;
-  text-align : center;
-  margin-top : 70px;
-  }
-  .feynman__link {
-  position : absolute;
-  top : 50%;
-  right : 48px;
-  }
-  .feynman__link_text {
-  line-height : 51px;
-  font-size : 36px;
-  font-weight : normal;
-  color : #2f80ed;
-  }
-
-  /* KAUFMAN */
-
-  .kaufman {
-  background-color : #1f1f1f;
-  display : flex;
-  flex-direction : column;
-  align-items : center;
-  overflow : hidden;
-  position : relative;
-  }
-  .section-title_theme_dark, .section-subtitle_theme_dark {
-  color : #fff;
-  }
-  .table_theme_dark {
-  z-index : 1;
-  }
-  .table__cell_theme_dark {
-  width : 200px;
-  color : #fff;
-  margin-top : 80px;
-  }
-  .kaufman__triangle {
-  display : flex;
-  width : 877px;
-  height : 877px;
-  background-image : url("../images/kaufman-triangle.svg");
-  background-size : 97%;
-  position : absolute;
-  top : 0;
-  right : -210px;
-  }
-
-  /* FOOTER */
-
-  .footer {
-  min-height : 350px;
-  background-color : #1f1f1f;
-  padding-top : 60px;
-  padding-bottom : 40px;
-  position : relative;
-  display : flex;
-  justify-content : center;
-  color : #fff;
-  }
-  .footer__columnk-link {
+.feynman {
+  height: 790px;
+  padding-top: 100px;
+  background-color: #f2f2f2;
   display: flex;
-  }
-  .footer__columns {
-  width : 90%;
-  display : flex;
-  justify-content : space-between;
-  }
-  .footer__column_content_copyright {
-  display : flex;
-  flex-direction : column;
-  flex-basis : 711px;
-  justify-content : space-between;
-  }
-  .logo_place_footer {
-  background-image : url("../images/logo_place_footer.svg");
-  }
-  .footer__author {
+  flex-direction: column;
+  background-image: url("../images/feynman.png");
+  background-position: left bottom;
+  background-size: 867px 637px;
+  background-repeat: no-repeat;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+}
+.feynman__title {
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  text-align: center;
+  margin: 0;
+}
+.feynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+  margin: 0px;
+  padding: 0px;
+  margin-top: 70px;
+}
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+/* KAUFMAN */
+
+.kaufman {
+  background-color: #1f1f1f;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+.section-title_theme_dark,
+.section-subtitle_theme_dark {
+  color: #fff;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  background-image: url("../images/kaufman-triangle.svg");
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: 0px;
+}
+
+/* FOOTER */
+
+.footer {
+  min-height: 350px;
+  background-color: #1f1f1f;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  color: #fff;
+}
+.footer__columnk-link {
+  display: flex;
+}
+.footer__columns {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+.footer__column_content_copyright {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 711px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  justify-content: space-between;
+}
+.logo_place_footer {
+  background-image: url("../images/logo_place_footer.svg");
+}
+.footer__author {
   line-height: 25px;
   font-size: 18px;
   margin: 18px 0;
   font-weight: normal;
   align-self: flex-start;
-  }
-  .footer__column_content_info {
-  display : flex;
-  flex-direction : column;
-  }
-  .footer__column_content_social {
-  display : flex;
-  flex-direction : column;
-  }
-  .footer__social_icon {
-  width : 16px;
-  height : 16px;
-  padding-right : 10px;
-  }
-  .footer__column-heading {
-  line-height : 30px;
-  font-size : 18px;
-  font-weight : bold;
-  margin : 0 0 20px;
-  padding : 0;
-  }
-  .footer__column-links {
-  line-height : 30px;
-  font-size : 18px;
-  font-weight : normal;
-  margin : 0 0 16px;
-  padding : 0;
-  list-style : none;
-  }
-  .footer__link {
-  color : #fff;
-  }
+}
+.footer__column_content_info {
+  display: flex;
+  flex-direction: column;
+}
+.footer__column_content_social {
+  display: flex;
+  flex-direction: column;
+}
+.footer__social_icon {
+  width: 16px;
+  height: 16px;
+  padding-right: 10px;
+}
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0 0 20px;
+  padding: 0;
+  padding-top: 60px;
+}
+.footer__column-links {
+  margin: 0 0 16px;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  color: #fff;
+}
+.footer__link {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  color: #fff;
+  text-decoration: none;
+}
