--- a/styles/style.css
+++ b/styles/style.css
@@ -17,18 +17,21 @@
   display: flex;
   position: relative;
 }
+
 .logo {
   width: 228px;
   height: 32px;
   top: 30px;
   left: 64px;
 }
+
 .logo_place_header {
   background-image: url("../images/logo_place_header.svg");
   position: absolute;
   z-index: 2;
   object-fit: cover;
 }
+
 .header__title {
   max-width: 730px;
   line-height: 96px;
@@ -41,6 +44,7 @@
   margin-left: 64px;
   z-index: 5;
 }
+
 .header__subtitle {
   max-width: 388px;
   line-height: 25px;
@@ -53,10 +57,12 @@
   bottom: 30px;
   z-index: 4;
 }
+
 .header__link {
   color: #2f80ed;
   text-decoration: none;
 }
+
 .header__main-illustration {
   width: 765px;
   height: 608px;
@@ -66,11 +72,13 @@
   z-index: 1;
   background-size: cover;
 }
+
 .header__image {
   width: 100%;
   height: 100%;
   object-fit: fill;
 }
+
 .header__square-pic {
   height: 568px;
   width: 568px;
@@ -88,11 +96,13 @@
   justify-content: center;
   padding-top: 100px;
 }
+
 .two-columns {
   width: 80%;
   display: flex;
   justify-content: space-between;
 }
+
 .two-columns__brief {
   width: 175px;
   color: #2f80ed;
@@ -101,20 +111,24 @@
   font-weight: normal;
   margin: 0;
 }
+
 .two-columns__main-text {
   width: 80%;
   display: flex;
   flex-direction: column;
 }
+
 .two-columns__paragraph {
   margin: 0 0 30px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
 }
+
 .two-columns__paragraph:last-of-type {
   margin-bottom: 0;
 }
+
 .two-columns__span-accent {
   font-weight: bold;
 }
@@ -178,9 +192,11 @@
   font-weight: normal;
   margin: 20px 0 0;
 }
+
 .table_theme_dark {
   z-index: 1;
 }
+
 .table__cell_theme_dark {
   width: 200px;
   color: #fff;
@@ -203,6 +219,7 @@
   justify-content: flex-start;
   position: relative;
 }
+
 .feynman__title {
   width: 648px;
   line-height: 1.15;
@@ -211,6 +228,7 @@
   text-align: center;
   margin: 0;
 }
+
 .feynman__subtitle {
   line-height: 51px;
   font-size: 36px;
@@ -220,6 +238,7 @@
   padding: 0px;
   margin-top: 70px;
 }
+
 .feynman__link {
   position: absolute;
   top: 50%;
@@ -243,6 +262,7 @@
   padding-top: 90px;
   padding-bottom: 90px;
 }
+
 .section-title_theme_dark,
 .section-subtitle_theme_dark {
   color: #fff;
@@ -256,7 +276,7 @@
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: 0px;
+  z-index: 0;
 }
 
 /* FOOTER */
@@ -269,14 +289,17 @@
   justify-content: center;
   color: #fff;
 }
+
 .footer__columnk-link {
   display: flex;
 }
+
 .footer__columns {
   width: 90%;
   display: flex;
   justify-content: space-between;
 }
+
 .footer__column_content_copyright {
   display: flex;
   flex-direction: column;
@@ -285,9 +308,11 @@
   padding-bottom: 40px;
   justify-content: space-between;
 }
+
 .logo_place_footer {
   background-image: url("../images/logo_place_footer.svg");
 }
+
 .footer__author {
   line-height: 25px;
   font-size: 18px;
@@ -295,19 +320,23 @@
   font-weight: normal;
   align-self: flex-start;
 }
+
 .footer__column_content_info {
   display: flex;
   flex-direction: column;
 }
+
 .footer__column_content_social {
   display: flex;
   flex-direction: column;
 }
-.footer__social_icon {
+
+.footer__social-icon {
   width: 16px;
   height: 16px;
   padding-right: 10px;
 }
+
 .footer__column-heading {
   line-height: 30px;
   font-size: 18px;
@@ -316,6 +345,7 @@
   padding: 0;
   padding-top: 60px;
 }
+
 .footer__column-links {
   margin: 0 0 16px;
   padding: 0;
@@ -323,6 +353,7 @@
   text-decoration: none;
   color: #fff;
 }
+
 .footer__link {
   line-height: 30px;
   font-size: 18px;
